dataset1235/2025-2/2868285114/users/1072499734/executions/3649835072_3455942218.log
== SUBMISSION (2025-08-21 22:26:13)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(""))
disponivel = float(input(""))
# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1)))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:29:36)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float (input(""))
disponivel = float(input(""))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:26:41)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(""))
disponivel = float(input(""))
# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:22:44)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))
????? = f???t(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????
saldo = ???

# Impressao do valor total e do saldo:
print(?????)
print(?????)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    ????? = f???t(input("Qual o valor unitario do jogo? "))
    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:27:24)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(""))
disponivel = float(input(""))
# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total


# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:27:23)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(""))
disponivel = float(input(""))
# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total


# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:26:23)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(" "))
disponivel = float(input(" "))
# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1)))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:29:37)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float (input(""))
disponivel = float(input(""))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:27:58)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(""))
disponivel = float(input(""))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:27:22)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(""))
disponivel = float(input(""))
# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total


# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:27:57)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(""))
disponivel = float(input(""))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:26:41)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(""))
disponivel = float(input(""))
# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(""))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 22:26:24)
-- CODE: 
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor_uni = float(" "))
disponivel = float(input(" "))
# Calculo do valor a ser pago, incluindo o frete:
total = (valor_uni)*8+45
saldo = disponivel - total

# Impressao do valor total e do saldo:
print(round(total,1)))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 5
    valor_uni = float(" "))
                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
